@@ -9,6 +9,8 @@
 	* registry/registry.sgml: The GNU software pages are just pages, not
 	sites.  Change "Home page" to the modern "Homepage".
 
+	* lib/sgml.py: Report an empty <do> tag when encoding the registry.
+
 2007-07-03  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* registry/registry.sgml: Remove packages that do not contain a POT
